@@ -27,6 +27,7 @@ ot_add_source_file (NumericalMathFunction.cxx)
 ot_add_source_file (NumericalMathFunctionImplementation.cxx)
 ot_add_source_file (LinearFunction.cxx)
 ot_add_source_file (IdentityFunction.cxx)
+ot_add_source_file (IndicatorFunction.cxx)
 ot_add_source_file (QuadraticFunction.cxx)
 ot_add_source_file (NumericalMathEvaluationImplementation.cxx)
 ot_add_source_file (NumericalMathGradientImplementation.cxx)
@@ -152,6 +153,7 @@ ot_install_header_file (NoNumericalMathEvaluationImplementation.hxx)
 ot_install_header_file (ConstantNumericalMathHessianImplementation.hxx)
 ot_install_header_file (LinearFunction.hxx)
 ot_install_header_file (IdentityFunction.hxx)
+ot_install_header_file (IndicatorFunction.hxx)
 ot_install_header_file (QuadraticFunction.hxx)
 ot_install_header_file (UniVariatePolynomial.hxx)
 ot_install_header_file (UniVariatePolynomialImplementation.hxx)
